--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "wkhtmltopdf bindings for node.js",
   "main": "index.js",
   "scripts": {
+    "install": "node-gyp rebuild",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
