--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "install": "node-gyp rebuild",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec"
   },
   "repository": {
     "type": "git",
@@ -22,5 +22,9 @@
   "bugs": {
     "url": "https://github.com/tcort/node-wkhtmltopdf/issues"
   },
-  "homepage": "https://github.com/tcort/node-wkhtmltopdf"
+  "homepage": "https://github.com/tcort/node-wkhtmltopdf",
+  "devDependencies": {
+    "expect.js": "0.3.x",
+    "mocha": "1.19.x"
+  }
 }
