--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-wkhtmltopdf",
+  "name": "NodeWkHtmlToPdf",
   "version": "0.0.0",
   "description": "wkhtmltopdf bindings for node.js",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/tcort/node-wkhtmltopdf.git"
+    "url": "git://github.com/tcort/NodeWkHtmlToPdf.git"
   },
   "keywords": [
     "wkhtmltopdf",
@@ -20,9 +20,9 @@
   "author": "Thomas Cort <linuxgeek@gmail.com>",
   "license": "LGPLv3+",
   "bugs": {
-    "url": "https://github.com/tcort/node-wkhtmltopdf/issues"
+    "url": "https://github.com/tcort/NodeWkHtmlToPdf/issues"
   },
-  "homepage": "https://github.com/tcort/node-wkhtmltopdf",
+  "homepage": "https://github.com/tcort/NodeWkHtmlToPdf",
   "devDependencies": {
     "expect.js": "0.3.x",
     "mocha": "1.19.x"
