--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "wkhtmltox",
   "version": "0.0.0",
-  "description": "native wkhtmltox bindings for node.js",
+  "description": "high performance access to `wkhtmltopdf` and `wkhtmltoimage` from node.js.",
   "main": "index.js",
   "scripts": {
-    "install": "node-gyp rebuild",
+    "pretest": "jshint lib test ./index.js",
     "test": "mocha -R spec"
   },
   "repository": {
@@ -19,14 +19,47 @@
     "conversion"
   ],
   "author": "Thomas Cort <linuxgeek@gmail.com>",
-  "license": "LGPLv3+",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/tcort/wkhtmltox/issues"
   },
   "homepage": "https://github.com/tcort/wkhtmltox",
   "readmeFilename": "README.md",
+  "dependencies": {
+    "slang": "0.3.x"
+  },
   "devDependencies": {
+    "jshint": "2.5.x",
     "expect.js": "0.3.x",
     "mocha": "1.19.x"
+  },
+  "jshintConfig": {
+    "bitwise": true,
+    "curly": true,
+    "eqeqeq": true,
+    "forin": true,
+    "freeze": true,
+    "globalstrict": true,
+    "immed": true,
+    "indent": 4,
+    "moz": true,
+    "newcap": true,
+    "noarg": true,
+    "node": true,
+    "noempty": true,
+    "nonew": true,
+    "trailing": true,
+    "undef": true,
+    "smarttabs": true,
+    "strict": true,
+    "validthis": true,
+    "globals": {
+      "describe": false,
+      "it": false,
+      "before": false,
+      "beforeEach": false,
+      "after": false,
+      "afterEach": false
+    }
   }
 }
