package.json: depend on at least version 0.10.0 of node.js, increase test timeout.

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "expect.js": "0.3.x",
     "mocha": "1.19.x"
   },
+  "engines": {
+    "node": ">= 0.10.0"
+  },
   "jshintConfig": {
     "bitwise": true,
     "curly": true,
