wkhtmltox.js: use _ for defaulting options.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "homepage": "https://github.com/tcort/wkhtmltox",
   "readmeFilename": "README.md",
   "dependencies": {
-    "slang": "0.3.x"
+    "slang": "0.3.x",
+    "underscore": "1.6.x"
   },
   "devDependencies": {
     "jshint": "2.5.x",
