--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
   "homepage": "https://github.com/tcort/wkhtmltox",
   "readmeFilename": "README.md",
   "dependencies": {
-    "slang": "0.3.x",
-    "underscore": "1.6.x"
+    "slang": "^0.3.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "jshint": "2.5.x",
-    "expect.js": "0.3.x",
-    "mocha": "1.20.x"
+    "jshint": "^2.8.0",
+    "expect.js": "^0.3.1",
+    "mocha": "^2.2.5"
   },
   "engines": {
     "node": ">= 0.10.0"
