--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
 language: node_js
 node_js:
-  - "0.12"
-  - "0.11"
+  - "stable"
   - "0.10"
-  - "0.8"
-  - "0.6"
-  - "iojs"
-  - "iojs-v1.0.4"
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq wkhtmltopdf
