--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: node_js
 node_js:
   - "stable"
   - "0.10"
+addons:
+  apt:
+    packages:
+    - wkhtmltopdf
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq wkhtmltopdf
+  - wkhtmltopdf -V
+sudo: false
