--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "immed": true,
     "indent": 4,
     "moz": true,
-    "newcap": true,
+    "newcap": false,
     "noarg": true,
     "node": true,
     "noempty": true,
