--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
   "homepage": "https://github.com/tcort/wkhtmltox",
   "readmeFilename": "README.md",
   "dependencies": {
+    "lodash": "^4.12.0",
     "slang": "^0.3.0",
-    "lodash": "^4.12.0"
+    "ssi-logger": "^2.5.4"
   },
   "devDependencies": {
     "jshint": "^2.9.2",
