--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "lodash": "^4.17.4",
     "slang": "^0.3.0",
-    "ssi-logger": "^2.5.7"
+    "tclogger": "^3.0.0"
   },
   "devDependencies": {
     "jshint": "^2.9.5",
