--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
   "homepage": "https://github.com/tcort/wkhtmltox",
   "readmeFilename": "README.md",
   "dependencies": {
+    "@types/node": "~18.15.11",
     "lodash": "^4.17.21",
     "slang": "^0.3.0",
-    "tclogger": "^3.0.1",
-    "@types/node": "~15.6.1"
+    "ssi-logger": "^5.1.3"
   },
   "devDependencies": {
-    "jshint": "^2.12.0",
     "expect.js": "^0.3.1",
-    "mocha": "^8.4.0"
+    "jshint": "^2.13.6",
+    "mocha": "^10.2.0"
   },
   "engines": {
     "node": ">= 0.10.0"
